resources/assets/css/map.css
/* ... */
.route_manipulation_tools .draw_icon.leaflet-draw-toolbar-button-enabled .col,
.route_manipulation_tools .draw_icon .col:hover {
    background: #DF691A;
    color: rgb(235, 235, 235) !important;
}

.floating_panel,
.sidebar .card {
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
}

.dropdown.bootstrap-select {
    background-color: #4E5D6C;
}

#edit_route_freedraw_options_color,
.dropdown.bootstrap-select .btn {
    background-color: #4E5D6C;
    color: #FFF;
    border: 1px solid #2B3E5066;
}

#edit_route_draw_container a {
    color: #FFF;
}

#edit_route_draw_actions_container .leaflet-draw-actions {
    -webkit-transition: all 0.2s;
    -o-transition: all 0.2s;
    transition: all 0.2s;

    top: unset !important;
    position: unset !important;
    left: unset !important;
}

#edit_route_draw_actions_container .leaflet-draw-actions li {
    line-height: 35px;
}

#edit_route_draw_actions_container .leaflet-draw-actions a {
    background: inherit;
    color: #DF691A;
    font-size: 14px;
}

.button_hotkey_label {
    position: absolute;
    left: 10px;
    top: 0;
    z-index: 1;
}

/** Fix display type/beguiling enemy preset not filling full width of sidebar */
#map_enemy_visuals_container .leaflet-draw-section.leaflet-control {
    width: 100%;
}

#map-controls {
    height: 700px;
}

.map-scroll:before {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    content: '';
    background: #00000061;
    z-index: 999;
}

.map-scroll:after {
    content: 'Use ctrl + scroll to zoom the map';
    position: absolute;
    top: 50%;
    width: 100%;
    z-index: 999;
    font-size: 34px;
    color: #eaeaea;
    text-align: center;
}

/* Remove square background and border around enemies, but leave editing drag squares alone */
.leaflet-marker-icon.leaflet-div-icon:not(.leaflet-editing-icon):not(.leaflet-edit-marker-selected) {
    border: none;
    background-color: unset;
}

.leaflet-verticalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    top: 50%; /* possible because the placeholder's parent is the map */
    transform: translateY(-50%); /* using the CSS3 Transform technique */
}

.leaflet-verticalcenter .leaflet-control {
    margin-bottom: 10px;
}

.leaflet-horizontalcenter {
    position: absolute;
    z-index: 1000;
    pointer-events: none;
    left: 50%; /* possible because the placeholder's parent is the map */
    transform: translateX(-50%); /* using the CSS3 Transform technique */
}

.leaflet-horizontalcenter .leaflet-control {
    margin-right: 10px;
}

#map .dropdown-menu.show li {
    background-color: #2B3E50;
}

/** leaflet-marker-icon leaflet-div-icon leaflet-zoom-animated leaflet-interactive */
/** leaflet-marker-icon leaflet-div-icon leaflet-editing-icon leaflet-touch-icon leaflet-zoom-animated leaflet-interactive leaflet-marker-draggable */

.circleMenu-closed {
    opacity: 0;
}

.circleMenu-open {
    opacity: 1;
}

.leaflet-edit-marker-selected {
    border-color: yellow !important;
    border-radius: 4px !important; /* Fixes weird border */
}

.leaflet-edit-marker-selected.delete {
    border-color: red !important;
}

.map_icon.leaflet-edit-marker-selected {
    margin-top: -4px !important;
    margin-left: -4px !important;
}

.mdt_enemy_icon.leaflet-edit-marker-selected {
    margin-top: -9px !important;
    margin-left: -9px !important;
}

.boss_enemy_icon {
    width: 32px;
    height: 32px;
}

.enemy_aggressiveness_correction {
    margin-top: -6px;
}

.modifier {
    position: absolute;
    width: 25px !important;
    height: 25px !important;
    background-color: white;
    border: 1px black solid;
    border-radius: 18px;
}

.map_enemy_raid_marker_circle_menu {
    z-index: 10000;
}

.map_enemy_raid_marker_item {
    background-color: white !important;
    border: 1px black solid;
    border-radius: 18px;
}

.badge_enemy_forces {
    font-size: 100%;
    margin-left: -4px;
    background-color: #00f8;
}

.col-3-5 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 29.1%;
    flex: 0 0 29.1%;
    max-width: 29.1%;
}

.enemy_icon {
    background-color: white;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    border-radius: 100px;
}


/*
 * Enemy classes
 */
.melee {
    background-image: url('/images/enemyclasses/melee.png') !important;
}

.caster {
    background-image: url('/images/enemyclasses/caster.png') !important;
}

.ranged {
    background-image: url('/images/enemyclasses/ranged.png') !important;
}

.healer {
    background-image: url('/images/enemyclasses/healer.png') !important;
}

.boss {
    background-image: url('/images/enemyclassifications/boss.png') !important;
}

.enemy_icon.melee,
.enemy_icon.caster,
.enemy_icon.ranged,
.enemy_icon.healer,
.enemy_icon.enemy_forces {
    background-color: #2B3E50;
}

.enemy_icon.mdt {
    background-color: hotpink;
}

.enemy_icon.mdt.coupled {
    background-color: green;
}

/*
 * Enemy types
 */
.enemy_icon_npc_mdt,
.enemy_icon_npc_enemy_forces,
.enemy_icon_npc_enemy_portrait,
.enemy_icon_npc_class,
.enemy_icon_npc_type {
    background-color: white;
    border: black 2px solid;
    border-radius: 100px;
    background-blend-mode: luminosity;
}

.map_enemy_visual_fade {
    opacity: 50%;
}

.map_enemy_visual_fade.prideful,
.map_enemy_visual_fade.inspiring,
.map_enemy_visual_fade.unskippable {
    opacity: 80%;
}

.enemy_icon_npc_mdt {
    background-color: hotpink;
}

.enemy_icon_npc_enemy_portrait.aggressive,
.enemy_icon_npc_enemy_forces.aggressive,
.enemy_icon_npc_class.aggressive,
.enemy_icon_npc_type.aggressive {
    background-color: #dc3c3c !important;
}

.enemy_icon_npc_enemy_portrait.neutral,
.enemy_icon_npc_enemy_forces.neutral,
.enemy_icon_npc_class.neutral,
.enemy_icon_npc_type.neutral {
    background-color: #cccc2d !important;
}
/* ... */

